# TxtReader

./: CMakeLists.txt  main.cpp
bookmodel/: ContentsTree.h  FBHyperlinkType.h  ZLCachedMemoryAllocator.cpp  ZLCachedMemoryAllocator.h  ZLTextModel.cpp  ZLTextModel.h  ZLTextParagraph.h
conf/: 0.ncache  1.ncache  little_prince.txt  note.txt
encoding/: DummyEncodingConverter.cpp  Utf16EncodingConverters.cpp  Utf8EncodingConverter.cpp  ZLEncodingCollection.cpp  ZLEncodingConverter.cpp  ZLEncodingConverter.h
encoding/util/: ZLUnicodeUtil.cpp  ZLUnicodeUtil.h
file/: ZLFSManager.cpp  ZLFSManager.h  ZLFile.cpp  ZLFile.h  ZLFileInfo.h  ZLInputStream.h  ZLOutputStream.h
read/: BookReader.cpp  BookReader.h  PlainTextFormat.cpp  PlainTextFormat.h  TxtBookReader.cpp  TxtBookReader.h  TxtReader.cpp  TxtReader.h
unix/: ZLUnixFSManager.cpp  ZLUnixFSManager.h  ZLUnixFileInputStream.cpp  ZLUnixFileInputStream.h  ZLUnixFileOutputStream.cpp  ZLUnixFileOutputStream.h
util/: ZLFileUtil.cpp  ZLFileUtil.h  ZLStringUtil.cpp  ZLStringUtil.h
